--- a/json/project.json
+++ b/json/project.json
@@ -2,16 +2,22 @@
     {
         "coord": "113.32872,23.132363",
         "title": "项目1",
-        "human": "13"
+        "human": "13",
+        "level": "重点项目",
+        "dueDate": "2022.8.31"
     },
     {
         "coord": "113.32072,23.138363",
         "title": "项目2",
-        "human": "2"
+        "human": "2",
+        "level": "一般项目",
+        "dueDate": "2022.8.15"
     },
     {
         "coord": "113.33072,23.137363",
         "title": "项目3",
-        "human": "40"
+        "human": "40",
+        "level": "重点项目",
+        "dueDate": "2022.9.31"
     }
 ]
